--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "express-mesto-gha",
   "version": "1.0.0",
   "description": "https://github.com/DinaraMi/express-mesto-gha.git",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "lint": "npx eslint .",
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dinara Mikhailova <d9268843743@yandex.ru>",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.1",
     "express": "^4.18.2",
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "eslint": "^8.48.0",
-    "eslint-plugin-react": "^7.33.2",
     "nodemon": "^3.0.1"
   }
 }
