--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "author": "Dinara Mikhailova <d9268843743@yandex.ru>",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.5"
+    "joi": "^17.10.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.4.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "eslint": "^8.48.0",
